--- a/index.html
+++ b/index.html
@@ -3,41 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Free WebApp</title>
+    <title>Google Apps Script Link</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            margin: 50px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            margin-top: 50px;
         }
         button {
             padding: 10px 20px;
-            background: #007bff;
+            background-color: #4285F4;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            font-size: 16px;
         }
         button:hover {
-            background: #0056b3;
+            background-color: #357AE8;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My WebApp!</h1>
-        <p>This is a free hosted web app.</p>
-        <button onclick="alert('Hello, world!')">Click Me</button>
-    </div>
+    <h1>Open Apps Script WebApp</h1>
+    <button onclick="openScriptLink()">Click Me</button>
+
+    <script>
+        function openScriptLink() {
+            // Replace this with your Google Apps Script WebApp URL
+            const scriptUrl = "https://script.google.com/macros/s/AKfycbwGdgFeH_3ZUJmtV5kD6Am4CjTmmf6Nh3eWH80PT1UiQe2-QfVOCELtgkXgflGOSDPW/exec";
+            window.open(scriptUrl, "_blank");
+        }
+    </script>
 </body>
 </html>
+
